@@ -21,6 +21,8 @@ AC_ARG_ENABLE(insure, [  --enable-insure         Try to compile and run with Ins
                     , enable_insure=no)
 AC_ARG_ENABLE(ansi,   [  --enable-ansi           Try to compile and run with ANSI flags],
                     , enable_ansi=no)
+AC_ARG_ENABLE(ssl,    [  --enable-ssl            Enable ssl features (eg. https)],
+                    , enable_ssl=no)
 AC_ARG_ENABLE(ipv6,   [  --enable-ipv6           Build with support for IPv6], , )
 AC_ARG_ENABLE(cookies,[  --disable-cookies       Don't compile support for cookies],
                     , enable_cookies=yes)
@@ -30,8 +32,6 @@ AC_ARG_ENABLE(jpeg,   [  --disable-jpeg          Disable support for JPEG images
               enable_jpeg=$enableval, enable_jpeg=yes)
 AC_ARG_ENABLE(gif,    [  --disable-gif           Disable support for GIF images],
               enable_gif=$enableval, enable_gif=yes)
-AC_ARG_ENABLE(ssl,    [  --disable-ssl           Disable ssl features (eg. https)], 
-              enable_ssl=$enableval, enable_ssl=yes)
 AC_ARG_ENABLE(threaded-dns,[  --disable-threaded-dns  Disable the advantage of a reentrant resolver library],
               enable_threaded_dns=$enableval, enable_threaded_dns=yes)
 AC_ARG_ENABLE(rtfl,   [  --enable-rtfl           Build with rtfl messages])
@@ -288,6 +288,7 @@ if test "x$enable_ssl" = "xyes"; then
 
   if test "x$ssl_ok" = "xyes"; then
     LIBSSL_LIBS="-lcrypto -lssl"
+    AC_MSG_WARN([*** Enabling ssl support. THIS IS ALPHA CODE!***])
   else
     AC_MSG_WARN([*** No libssl found. Disabling ssl support.***])
   fi
